--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "example-app",
   "scripts": {
-    "build": "webpack --mode development --entry ./src/client/index.js --output ./static/bundle.js",
+    "build": "webpack --mode development --entry ./src/client/index.js --output-path ./public --output-filename bundle.js",
     "start": "node src/server/app.js"
   },
   "dependencies": {
@@ -16,3 +16,4 @@
     "webpack-cli": "^3.3.12"
   }
 }
+
